--- a/public/css/mainBigScreen.css
+++ b/public/css/mainBigScreen.css
@@ -32,7 +32,7 @@ html {
 }
 
 .slide-img-six {
-	background: url(/images/ouarzazate.webp);
+	background: url(/images/taghazout-bay.jpg);
 	background-size: cover
 }
 
