--- a/public/css/mainBigScreen.css
+++ b/public/css/mainBigScreen.css
@@ -231,6 +231,10 @@ footer address {
 .header-container.marrakech {
 	background: linear-gradient(to top, #00111d 0%, rgb(0 17 29 / .8) 50%, rgb(0 17 29 / .2) 100%), url(/images/marrakech-main_950.jpg)
 }
+.header-container.rabat {
+	background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+	url(/images/rabat-main_950.jpeg);
+}
 .header-container.palmeraie {
     background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
     url(/images/palmeraie-main_950.webp);
@@ -261,6 +265,7 @@ footer address {
 
 .activities .header-container, 
 .header-container.marrakech,
+.header-container.rabat,
 .header-container.palmeraie,
 .header-container.essaouira,
 .header-container.agadir,
@@ -336,6 +341,10 @@ address.tours-section-content .contact-item {
 	.header-container.marrakech {
 		background: linear-gradient(to top, #00111d 0%, rgb(0 17 29 / .8) 50%, rgb(0 17 29 / .2) 100%), url(/images/marrakech-main_1080.jpg)
 	}
+	.header-container.rabat {
+        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+        url(/images/rabat-main_1080.jpeg);
+    }
     .header-container.palmeraie {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/palmeraie-main_1080.webp);
@@ -366,6 +375,7 @@ address.tours-section-content .contact-item {
 
 	.activities .header-container, 
 	.header-container.marrakech,
+	.header-container.rabat,
     .header-container.palmeraie,
 	.header-container.essaouira,
 	.header-container.agadir,
@@ -422,6 +432,10 @@ address.tours-section-content .contact-item {
 	.header-container.marrakech {
 		background: linear-gradient(to top, #00111d 0%, rgb(0 17 29 / .8) 50%, rgb(0 17 29 / .2) 100%), url(/images/marrakech-main_1250.jpg)
 	}
+	.header-container.rabat {
+        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+        url(/images/rabat-main_1250.jpeg);
+    }
     .header-container.palmeraie {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/palmeraie-main_1250.webp);
@@ -452,6 +466,7 @@ address.tours-section-content .contact-item {
 
 	.activities .header-container,
 	.header-container.marrakech,
+	.header-container.rabat,
     .header-container.palmeraie,
 	.header-container.essaouira,
 	.header-container.agadir,
@@ -521,6 +536,10 @@ address.tours-section-content .contact-item {
 	.header-container.marrakech {
 		background: linear-gradient(to top, #00111d 0%, rgb(0 17 29 / .8) 50%, rgb(0 17 29 / .2) 100%), url(/images/marrakech-main.jpg)
 	}
+	.header-container.rabat {
+        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+        url(/images/rabat-main.jpeg);
+    }
     .header-container.palmeraie {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/palmeraie-main.webp);
@@ -555,6 +574,7 @@ address.tours-section-content .contact-item {
 	.header-container.quad,
 	.header-container.balloon,
 	.header-container.marrakech,
+	.header-container.rabat,
     .header-container.palmeraie,
 	.header-container.essaouira,
 	.header-container.agadir,
