modify the files

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -444,7 +444,7 @@ figcaption {
 }
 
 .slide-img-five {
-	background: url(/images/fes_550.webp);
+	background: url(/images/rabat_550.jpeg);
 	background-size: cover;
 	background-position: bottom
 }
@@ -1065,7 +1065,7 @@ footer address dd {
 	}
 
 	.slide-img-five {
-		background: url(/images/fes_650.webp);
+		background: url(/images/rabat_650.jpeg);
 		background-size: cover
 	}
 
@@ -1137,7 +1137,7 @@ footer address dd {
 	}
 
 	.slide-img-five {
-		background: url(/images/fes_850.webp);
+		background: url(/images/rabat_850.jpeg);
 		background-size: cover
 	}
 
