--- a/public/css/mainBigScreen.css
+++ b/public/css/mainBigScreen.css
@@ -27,7 +27,7 @@ html {
 }
 
 .slide-img-five {
-	background: url(/images/fes.webp);
+	background: url(/images/rabat.jpeg);
 	background-size: cover
 }
 
