--- a/public/css/activities.css
+++ b/public/css/activities.css
@@ -14,6 +14,10 @@ body {
     background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
     url(/images/marrakech-main_550.jpg);
 }
+.header-container.kaouki {
+    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+    url(/images/sidi-kaouki-main_550.jpg);
+}
 .header-container.rabat {
     background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
     url(/images/rabat-main_550.jpeg);
@@ -42,7 +46,7 @@ body {
     background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
     url(/images/chefchaoune-main_550.jpg);
   }
-.header-container ,.header-container.palmeraie, .header-container.marrakech, .header-container.rabat, .header-container.essaouira, .header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
+.header-container ,.header-container.palmeraie, .header-container.marrakech,.header-container.kaouki, .header-container.rabat, .header-container.essaouira, .header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
     background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
@@ -196,6 +200,10 @@ footer {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/marrakech-main_650.jpg);
     }
+    .header-container.kaouki {
+        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+        url(/images/sidi-kaouki-main_650.jpg);
+    }
     .header-container.rabat {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/rabat-main_650.jpeg);
@@ -228,7 +236,7 @@ footer {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/chefchaoune-main_650.jpg);
       }
-    .header-container, .header-container.marrakech,.header-container.palmeraie,.header-container.rabat, .header-container.essaouira,.header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
+    .header-container, .header-container.marrakech,.header-container.kaouki, .header-container.palmeraie,.header-container.rabat, .header-container.essaouira,.header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
         background-blend-mode: darken;
         background-repeat: no-repeat;
         background-size: cover;
@@ -250,6 +258,10 @@ footer {
     .header-container.marrakech {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/marrakech-main_800.jpg);
+    }
+    .header-container.kaouki {
+        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
+        url(/images/sidi-kaouki-main_800.jpg);
     }
     .header-container.rabat {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
@@ -279,7 +291,7 @@ footer {
         background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
         url(/images/chefchaoune-main_800.jpg);
       }
-    .header-container , .header-container.marrakech,.header-container.palmeraie,.header-container.rabat, .header-container.essaouira, .header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
+    .header-container , .header-container.marrakech,.header-container.kaouki,.header-container.palmeraie,.header-container.rabat, .header-container.essaouira, .header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
         background-blend-mode: darken;
         background-repeat: no-repeat;
         background-size: cover;
