modify the files

--- a/public/css/activities.css
+++ b/public/css/activities.css
@@ -1,301 +1,1 @@
-body {
-    background: rgb(0, 17, 29);
-    color: white;
-} 
-.header-container {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,0) 100% ), 
-    url(/images/camel-tours_650.webp); 
-}
-.header-container.palmeraie {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/palmeraie-main_550.webp);
-}
-.header-container.marrakech {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/marrakech-main_550.jpg);
-}
-.header-container.kaouki {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/sidi-kaouki-main_550.jpg);
-}
-.header-container.rabat {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/rabat-main_550.jpeg);
-}
-.header-container.essaouira {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/essaouira-main_550.jpg);
-}
-.header-container.agadir {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/agadir-main_550.jpg);
-}
-.header-container.casablanca {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/casablanca-main_550.jpg);
-  }
-  .header-container.fes {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/taghazout-main_550.webp);
-  }
-  .header-container.ouarzazate {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/imsouane-main_550.jpg);
-  }
-  .header-container.chefchaoune {
-    background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-    url(/images/chefchaoune-main_550.jpg);
-  }
-.header-container ,.header-container.palmeraie, .header-container.marrakech,.header-container.kaouki, .header-container.rabat, .header-container.essaouira, .header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
-    background-blend-mode: darken;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-.header-main-content { 
-    text-align: left;
-    height: 67svh;
-    display: flex;
-    align-items: flex-end;
-}
-.blur-animation {
-    filter: blur(4px);
-    opacity: 0;
-    transition: all 700ms ease-in-out;
-}
-.dashed-line { 
-    width: 100%;
-    transform: scaleX(0); 
-    transform-origin: left; 
-    border:1px dashed rgba(255, 255, 255, .4);
-    background: #081C2B;
-    margin: 0 auto;
-    transition: all 1.5s ease;
-}
-.added-btn {
-    border: 1px solid rgba(255, 255, 255, .6);
-}
-.big-heading {
-    margin: 1.5rem 0 1rem 0;
-}
-.btn {
-    margin: 1rem 0;
-}
-.activities-link {
-    display: flex;
-    align-items: center;
-}
-.activities-link a {
-    margin-left: .31rem;
-}
-.activity-main-content {
-    background: rgb(0, 17, 29); 
-}
-.activity-description {
-    text-align: left;
-    padding: 4rem 0;
-    margin: 0 auto;
-    width: 95%;
-}
-.activity-description p {
-    margin-bottom: 2.5rem;
-}
-.activity-time {
-    margin: 0 auto;
-    width: 95%;
-    border-top: 1px dashed rgba(255,255,255,.48);
-
-}
-.activity-time div {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.5rem 0; 
-    border-bottom: 1px dashed rgba(255,255,255,.48);
-}
-.activity-time p {
-    font-size: .875rem;
-    line-height: 1.24rem;
-    letter-spacing: -0.2px;
-}
-h2 {
-    font-size: .75rem;
-    line-height: .812rem;
-    letter-spacing: .1875rem;
-}
-.main-activity-img {
-    width: 95%;
-    margin: 2.5rem auto;
-    border: none;
-}
-.main-activity-img img {
-    border-radius: .75rem;
-}
-.additionnal-infos {
-    width: 95%;
-    margin: 0 auto;
-}
-.additionnal-infos ul {
-    list-style-type:disc;
-    margin: 2rem auto;
-    width: 90%;
-}
-.additionnal-infos-two {
-    width: 95%;
-    margin: 2.5rem auto;
-}
-.additionnal-infos-two p {
-    margin-top: 2rem;
-}
-.booking-form {
-    padding-bottom: 1rem;
-}
-.booking-form-container {
-    width: 95%;
-    margin: 3.5rem auto;
-    background: #1b2e3c;
-    border-radius: .75rem;
-    padding: 2rem 1.5rem;
-}
-.booking-form-container h3 {
-    font-size: 1.75rem;
-}
-.booking-form-container p {
-    margin: 2.5rem 0;
-}
-form input {
-    border: 1px dashed rgba(255, 255, 255, .4);
-    background: none;
-    color: white;
-    padding: 1rem .75rem;
-    border-radius: .5rem;
-    width: 100%;
-    margin-top: .625rem;
-}
-form div {
-    margin-bottom: 1.5rem;
-}
-#message {
-    padding: 1rem .75rem 9.5rem .75rem;
-}
-#submit {
-    width: 100%;
-}
-.tours-section-container {
-    color: #081C2B;
-}
-.tours-section-container .added-btn {
-    border: 1px solid rgba(8, 28, 43, .16);
-}
-.additionnal-infos-two p {
-    padding-bottom: 2rem;
-}
-footer {
-    color: #081C2B;
-}
-@media screen and (min-width: 600px) {
-    html {
-        font-size: 1.2rem;
-      } 
-    .header-container.marrakech {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/marrakech-main_650.jpg);
-    }
-    .header-container.kaouki {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/sidi-kaouki-main_650.jpg);
-    }
-    .header-container.rabat {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/rabat-main_650.jpeg);
-    }
-    .header-container.palmeraie {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/palmeraie-main_650.webp);
-    }
-    .header-container.essaouira {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/essaouira-main_650.jpg);
-    }
-    .header-container.agadir {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/agadir-main_650.jpg);
-    }
-    .header-container.casablanca {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/casablanca-main_650.jpg);
-      }
-      .header-container.fes {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/taghazout-main_650.webp);
-      }
-      .header-container.ouarzazate {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/imsouane-main_650.jpg);
-      }
-      .header-container.chefchaoune {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/chefchaoune-main_650.jpg);
-      }
-    .header-container, .header-container.marrakech,.header-container.kaouki, .header-container.palmeraie,.header-container.rabat, .header-container.essaouira,.header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
-        background-blend-mode: darken;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-    }  
-}
-@media screen and (min-width: 750px){
-    :root {
-        --main-width:95%;
-      }  
-    .header-container {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,0) 100% ), 
-        url(/images/camel-tours_800.webp);
-    } 
-    .header-container.palmeraie {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/palmeraie-main_800.webp);
-    }
-    .header-container.marrakech {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/marrakech-main_800.jpg);
-    }
-    .header-container.kaouki {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/sidi-kaouki-main_800.jpg);
-    }
-    .header-container.rabat {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/rabat-main_800.jpeg);
-    }
-    .header-container.essaouira {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/essaouira-main_800.jpg);
-    }
-    .header-container.agadir {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/agadir-main_800.jpg);
-    }
-    .header-container.casablanca {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/casablanca-main_800.jpg);
-      }
-      .header-container.fes {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/taghazout-main_800.webp);
-      }
-      .header-container.ouarzazate {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/imsouane-main_800.jpg);
-      }
-      .header-container.chefchaoune {
-        background: linear-gradient(to top, rgb(0, 17, 29) 0%, rgba(0, 17, 29, .8) 50%, rgba(0, 17, 29,.2) 100% ), 
-        url(/images/chefchaoune-main_800.jpg);
-      }
-    .header-container , .header-container.marrakech,.header-container.kaouki,.header-container.palmeraie,.header-container.rabat, .header-container.essaouira, .header-container.agadir, .header-container.casablanca, .header-container.fes, .header-container.header-container.ouarzazate, .header-container.header-container.chefchaoune{
-        background-blend-mode: darken;
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-    }
-    
-}
+body{background:#00111d;color:#fff}.header-container{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,#fff0 100%),url(/images/camel-tours_650.webp)}.header-container.palmeraie{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/palmeraie-main_550.webp)}.header-container.marrakech{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/marrakech-main_550.jpg)}.header-container.kaouki{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/sidi-kaouki-main_550.jpg)}.header-container.rabat{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/rabat-main_550.jpeg)}.header-container.essaouira{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/essaouira-main_550.jpg)}.header-container.agadir{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/agadir-main_550.jpg)}.header-container.casablanca{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/casablanca-main_550.jpg)}.header-container.fes{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/taghazout-main_550.webp)}.header-container.ouarzazate{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/imsouane-main_550.jpg)}.header-container.chefchaoune{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/chefchaoune-main_550.jpg)}.header-container,.header-container.palmeraie,.header-container.marrakech,.header-container.kaouki,.header-container.rabat,.header-container.essaouira,.header-container.agadir,.header-container.casablanca,.header-container.fes,.header-container.header-container.ouarzazate,.header-container.header-container.chefchaoune{background-blend-mode:darken;background-repeat:no-repeat;background-size:cover;position:relative}.header-main-content{text-align:left;height:67svh;display:flex;align-items:flex-end}.blur-animation{filter:blur(4px);opacity:0;transition:all 700ms ease-in-out}.dashed-line{width:100%;transform:scaleX(0);transform-origin:left;border:1px dashed rgb(255 255 255 / .4);background:#081C2B;margin:0 auto;transition:all 1.5s ease}.added-btn{border:1px solid rgb(255 255 255 / .6)}.big-heading{margin:1.5rem 0 1rem 0}.btn{margin:1rem 0}.activities-link{display:flex;align-items:center}.activities-link a{margin-left:.31rem}.activity-main-content{background:#00111d}.activity-description{text-align:left;padding:4rem 0;margin:0 auto;width:95%}.activity-description p{margin-bottom:2.5rem}.activity-time{margin:0 auto;width:95%;border-top:1px dashed rgb(255 255 255 / .48)}.activity-time div{display:flex;justify-content:space-between;padding:1.5rem 0;border-bottom:1px dashed rgb(255 255 255 / .48)}.activity-time p{font-size:.875rem;line-height:1.24rem;letter-spacing:-.2px}h2{font-size:.75rem;line-height:.812rem;letter-spacing:.1875rem}.main-activity-img{width:95%;margin:2.5rem auto;border:none}.main-activity-img img{border-radius:.75rem}.additionnal-infos{width:95%;margin:0 auto}.additionnal-infos ul{list-style-type:disc;margin:2rem auto;width:90%}.additionnal-infos-two{width:95%;margin:2.5rem auto}.additionnal-infos-two p{margin-top:2rem}.booking-form{padding-bottom:1rem}.booking-form-container{width:95%;margin:3.5rem auto;background:#1b2e3c;border-radius:.75rem;padding:2rem 1.5rem}.booking-form-container h3{font-size:1.75rem}.booking-form-container p{margin:2.5rem 0}form input{border:1px dashed rgb(255 255 255 / .4);background:none;color:#fff;padding:1rem .75rem;border-radius:.5rem;width:100%;margin-top:.625rem}form div{margin-bottom:1.5rem}#message{padding:1rem .75rem 9.5rem .75rem}#submit{width:100%}.tours-section-container{color:#081C2B}.tours-section-container .added-btn{border:1px solid rgb(8 28 43 / .16)}.additionnal-infos-two p{padding-bottom:2rem}footer{color:#081C2B}@media screen and (min-width:600px){html{font-size:1.2rem}.header-container.marrakech{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/marrakech-main_650.jpg)}.header-container.kaouki{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/sidi-kaouki-main_650.jpg)}.header-container.rabat{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/rabat-main_650.jpeg)}.header-container.palmeraie{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/palmeraie-main_650.webp)}.header-container.essaouira{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/essaouira-main_650.jpg)}.header-container.agadir{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/agadir-main_650.jpg)}.header-container.casablanca{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/casablanca-main_650.jpg)}.header-container.fes{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/taghazout-main_650.webp)}.header-container.ouarzazate{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/imsouane-main_650.jpg)}.header-container.chefchaoune{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/chefchaoune-main_650.jpg)}.header-container,.header-container.marrakech,.header-container.kaouki,.header-container.palmeraie,.header-container.rabat,.header-container.essaouira,.header-container.agadir,.header-container.casablanca,.header-container.fes,.header-container.header-container.ouarzazate,.header-container.header-container.chefchaoune{background-blend-mode:darken;background-repeat:no-repeat;background-size:cover;position:relative}}@media screen and (min-width:750px){:root{--main-width:95%}.header-container{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,#fff0 100%),url(/images/camel-tours_800.webp)}.header-container.palmeraie{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/palmeraie-main_800.webp)}.header-container.marrakech{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/marrakech-main_800.jpg)}.header-container.kaouki{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/sidi-kaouki-main_800.jpg)}.header-container.rabat{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/rabat-main_800.jpeg)}.header-container.essaouira{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/essaouira-main_800.jpg)}.header-container.agadir{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/agadir-main_800.jpg)}.header-container.casablanca{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/casablanca-main_800.jpg)}.header-container.fes{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/taghazout-main_800.webp)}.header-container.ouarzazate{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/imsouane-main_800.jpg)}.header-container.chefchaoune{background:linear-gradient(to top,#00111d 0%,rgb(0 17 29 / .8) 50%,rgb(0 17 29 / .2) 100%),url(/images/chefchaoune-main_800.jpg)}.header-container,.header-container.marrakech,.header-container.kaouki,.header-container.palmeraie,.header-container.rabat,.header-container.essaouira,.header-container.agadir,.header-container.casablanca,.header-container.fes,.header-container.header-container.ouarzazate,.header-container.header-container.chefchaoune{background-blend-mode:darken;background-repeat:no-repeat;background-size:cover;position:relative}}
