--- a/public/css/tours.css
+++ b/public/css/tours.css
@@ -1,134 +1,1 @@
-
-
-.header-container { 
-    background: linear-gradient(#a0a498 0%,#ffffff 50%, #ffffff 100%);
-    color: #081C2B;
-}
-.tours {
-    background: none;
-}
-.tours-section-title {
-    text-align: center;
-    margin-top: 4rem;
-}
-a:hover {
-    color: #081C2B;
-    background: #FDFCFB;
-}
-li a:hover {
-    background: #FDFCFB;
-}
-.tour-informations {
-    background: none;
-    padding: 0;
-}
-.tours-section-container {
-    margin: 0 auto;
-    padding: 0;
-}
-.menu-list a {
-    color: white;
-}
-.dashed-line { 
-    width: 100%;
-    transform: scaleX(0); 
-    transform-origin: left; 
-    border:1px dashed rgba(0, 0, 0, .4); 
-    margin: 0 auto;
-    transition: all 1.5s ease;
-  }
-  .tours-section-container {
-    margin: 8rem auto 0 auto;
-  }
-  .blur-paragraph {
-    opacity: 0;
-    filter: blur(4px);
-    transition: all 700ms ease-in-out;
-  }
-  address.tours-section-content {
-    display: flex;
-    width: 95%;
-    margin: 4rem auto;
-    flex-wrap: wrap;
-    gap: .5rem;
-}
-  address.tours-section-content .contact-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1.5rem;
-    background: #fff;
-    border-radius: .5rem;
-    width: 100%;
-    height: 222px;
-    font-family: "Instrument Sans";
-    font-style: normal;
-    font-weight: 400;
-    border: 1px dashed grey;
-  }
-  .tours-section-title {
-    text-align: center;
-    margin-top: 4rem;
-}
-.contact-item .contact-icon {
-    width: 8%;
-}
-.booking-form-container {
-    width: 95%;
-    margin: 3.5rem auto;
-    background: #1b2e3c;
-    border-radius: .75rem;
-    padding: 2rem 1.5rem;
-    color: white;
-}
-.booking-form-container h3 {
-    font-size: 1.75rem;
-}
-form div {
-    margin-bottom: 1.5rem;
-}
-form input {
-    border: 1px dashed rgba(255, 255, 255, .4);
-    background: none;
-    color: white;
-    padding: 1rem .75rem;
-    border-radius: .5rem;
-    width: 100%;
-    margin-top: .625rem;
-}
-#submit {
-    width: 100%;
-}
-#message {
-    padding: 1rem .75rem 9.5rem .75rem;
-}
-.succes-message {
-    display: none;
-}
-.succes-message.toggle {
-    display: block;
-}
-@media screen and (min-width: 600px) {
-    html {
-        font-size: 1.2rem;
-      } 
-    :root{
-        --main-width:95%;
-    }  
-    .tours-page .faqs-container {
-        width: 95%;
-      }
-      address.tours-section-content .contact-item {
-        width: 49%;
-        height: 250px;
-    }  
-}
-@media screen and (min-width: 750px){
-    .tours-page .faqs-container {
-        width: 95%;
-      }
-      address.tours-section-content .contact-item {
-        width: 49%;
-        height: 320px;
-    }  
-}
+.header-container{background:linear-gradient(#a0a498 0%,#ffffff 50%,#ffffff 100%);color:#081C2B}.tours{background:none}.tours-section-title{text-align:center;margin-top:4rem}a:hover{color:#081C2B;background:#FDFCFB}li a:hover{background:#FDFCFB}.tour-informations{background:none;padding:0}.tours-section-container{margin:0 auto;padding:0}.menu-list a{color:#fff}.dashed-line{width:100%;transform:scaleX(0);transform-origin:left;border:1px dashed rgb(0 0 0 / .4);margin:0 auto;transition:all 1.5s ease}.tours-section-container{margin:8rem auto 0 auto}.blur-paragraph{opacity:0;filter:blur(4px);transition:all 700ms ease-in-out}address.tours-section-content{display:flex;width:95%;margin:4rem auto;flex-wrap:wrap;gap:.5rem}address.tours-section-content .contact-item{display:flex;flex-direction:column;justify-content:space-between;padding:1.5rem;background:#fff;border-radius:.5rem;width:100%;height:222px;font-family:"Instrument Sans";font-style:normal;font-weight:400;border:1px dashed grey}.tours-section-title{text-align:center;margin-top:4rem}.contact-item .contact-icon{width:8%}.booking-form-container{width:95%;margin:3.5rem auto;background:#1b2e3c;border-radius:.75rem;padding:2rem 1.5rem;color:#fff}.booking-form-container h3{font-size:1.75rem}form div{margin-bottom:1.5rem}form input{border:1px dashed rgb(255 255 255 / .4);background:none;color:#fff;padding:1rem .75rem;border-radius:.5rem;width:100%;margin-top:.625rem}#submit{width:100%}#message{padding:1rem .75rem 9.5rem .75rem}.succes-message{display:none}.succes-message.toggle{display:block}@media screen and (min-width:600px){html{font-size:1.2rem}:root{--main-width:95%}.tours-page .faqs-container{width:95%}address.tours-section-content .contact-item{width:49%;height:250px}}@media screen and (min-width:750px){.tours-page .faqs-container{width:95%}address.tours-section-content .contact-item{width:49%;height:320px}}
